--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 <body>
 
     <h1>HCabrera</h1>
+    <nav>
+        <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Quiénes somos</a></li>
+            <li><a href="#">Servicios</a>
+            </li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+    </nav>
     <br>
     <div class="portada">
         <div class="capa">
