--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Repuestos y Servicios HCABRERA</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,6 +17,7 @@
 
     <h1>HCabrera</h1>
     <br>
+
     <div class="portada">
         <div class="capa">
             <div class="container">
@@ -28,19 +31,52 @@
         </div>
     </div>
 
+    <div id="carouselExampleCaptions" class="carousel slide seccionCarrusel" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="imagenes/Maquina1.jpg" class="d-block w-100 imagenCarrusel" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/Cilindro.jpg" class="d-block w-100 imagenCarrusel" alt="...">
+                <div class="carousel-caption d-none d-md-block">
 
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/Maquina2.jpg" class="d-block w-100 imagenCarrusel" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
 
-
-
+        <div class="alert alert-info">
+            <strong>HCABRERA</strong> REPUESTOS Y SERVICIOS DE MAQUINARIA PESADA.
+        </div>
+    </div>
 
 
     <!--
-    <h1 id="titulo1">HCABRERA</h1>
+            <h1 id="titulo1">HCABRERA</h1>
 
-    <div class="portada">
-        <img src="imagenes/portada.jpg" alt="Portada_Hcabrera">
-    </div>
--->
+            <div class="portada">
+                <img src="imagenes/portada.jpg" alt="Portada_Hcabrera">
+            </div>
+        -->
 </body>
 
 </html>
