--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         </button>
 
         <div class="alert alert-info">
-            <strong>HCABRERA</strong> REPUESTOS Y SERVICIOS DE MAQUINARIA PESADA.
+            <strong>Info!</strong> Indicates a neutral informative change or action.
         </div>
     </div>
 
