--- a/index.html
+++ b/index.html
@@ -18,19 +18,22 @@
     <h1>HCabrera</h1>
 
     <!--MENÚ CON SUB MENU (ELIMINADO) DESPLEGABLE-->
-    <div class='col-sm-3 col-md-6 col-lg-12'>
-        <nav>
+    <div class='row col-md-12 barraMenu'>
+        <nav class="text-center">
+
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Quiénes somos</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li class="col-md-2"><a href="#">Inicio</a></li>
+                <li class="col-md-2"><a href="#">Quiénes somos</a></li>
+                <li class="col-md-2"><a href="#">Servicios</a></li>
+                <li class="col-md-2"><a href="#">Blog</a></li>
+                <li class="col-md-2"><a href="#">Contacto</a></li>
+
             </ul>
+
         </nav>
     </div>
 
-    <br>
+
 
     <!--FOTO PORTADA-->
 
@@ -47,6 +50,9 @@
         </div>
     </div>
 
+
+
+    <!--CARRUSEL DE IMÁGENES-->
     <div id="carouselExampleCaptions" class="carousel slide seccionCarrusel" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -62,7 +68,6 @@
             <div class="carousel-item">
                 <img src="imagenes/Cilindro.jpg" class="d-block w-100 imagenCarrusel" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-
                 </div>
             </div>
             <div class="carousel-item">
@@ -79,12 +84,10 @@
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
                         </button>
-
-        <div class="alert alert-info">
-            <strong>Info!</strong> Indicates a neutral informative change or action.
-        </div>
     </div>
-
+    <div class="alert alert-primary" role="alert">
+        HCABRERA - REPUESTOS Y SERVICIOS DE MAQUINARIA PESADA.
+    </div>
 
     <!--
             <h1 id="titulo1">HCABRERA</h1>
