--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -85,9 +86,10 @@
                             <span class="visually-hidden">Next</span>
                         </button>
     </div>
-    <div class="alert alert-primary" role="alert">
+    <div class="alert alert-primary pieCarrusel" role="alert">
         HCABRERA - REPUESTOS Y SERVICIOS DE MAQUINARIA PESADA.
     </div>
+
 
     <!--
             <h1 id="titulo1">HCABRERA</h1>
