--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 
+
 </head>
 
 <body>
@@ -44,13 +45,50 @@
                 <!--TEXTO DENTRO DE PORTADA-->
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam consequuntur ducimus vero molestias voluptate, veritatis, debitis repellendus quis tempore ipsum totam! Velit laborum facilis, laudantium suscipit dolor eius et consequatur!
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem autem nihil quis! Qui, dolor. Distinctio voluptates dolore quae, explicabo animi odit voluptate, rerum, inventore aut quam eos aspernatur illo sed?</p>
-                <p class="boton">
-                    leer más...
+                <p>
+
+                    <button class="btn btn-primary">
+                <span class="spinner-border spinner-border-sm"></span>
+                Página en proceso..
+                </button>
                 </p>
             </div>
         </div>
     </div>
 
+    <div class="alert alert-primary pieCarrusel" role="alert">
+        || TIPOS DE REPUESTOS ||
+    </div>
+
+    <!--FOTOS DESCRIPCIÓN REPUESTO-->
+
+    <div class="gallery desripcionRepuesto">
+        <a target="_blank" href="Repuesto1.jpg">
+            <img src="imagenes/Repuesto1.jpg" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">Descripción del repuesto</div>
+    </div>
+
+    <div class="gallery">
+        <a target="_blank" href="Repuesto2.jpg">
+            <img src="imagenes/Repuesto2.jpg" alt="Forest" width="600" height="400">
+        </a>
+        <div class="desc">Descripción del repuesto</div>
+    </div>
+
+    <div class="gallery">
+        <a target="_blank" href="Repuesto3.jpg">
+            <img src="imagenes/Repuesto3.jpg" alt="Northern Lights" width="600" height="400">
+        </a>
+        <div class="desc">Descripción del repuesto</div>
+    </div>
+
+    <div class="gallery">
+        <a target="_blank" href="Repuesto4.jpg">
+            <img src="imagenes/Repuesto4.jpg" alt="Mountains" width="600" height="400">
+        </a>
+        <div class="desc">Descripción del repuesto</div>
+    </div>
 
 
     <!--CARRUSEL DE IMÁGENES-->
@@ -98,6 +136,7 @@
                 <img src="imagenes/portada.jpg" alt="Portada_Hcabrera">
             </div>
         -->
+
 </body>
 
 </html>
