--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </div>
 
-    <div class="alert alert-primary pieCarrusel" role="alert">
+    <div class="alert alert-primary pieRepuestos" role="alert">
         || TIPOS DE REPUESTOS ||
     </div>
 
@@ -115,6 +115,7 @@
                 </div>
             </div>
         </div>
+        <!--BOTONES CARRUSEL -->
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
@@ -124,7 +125,8 @@
                             <span class="visually-hidden">Next</span>
                         </button>
     </div>
-    <div class="alert alert-primary pieCarrusel" role="alert">
+    <!--PIE CARRUSEL-->
+    <div class="alert alert-primary" role="alert">
         HCABRERA - REPUESTOS Y SERVICIOS DE MAQUINARIA PESADA.
     </div>
 
