Botones de menú

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         <nav class="text-center">
 
             <ul>
-                <li class="col-md-2"><a href="#">Quiénes somos</a></li>
-                <li class="col-md-2"><a href="#">Servicios</a></li>
+
+                <li class="col-md-2"><a href="#">Conócemos</a></li>
+                <li class="col-md-2"><a href="#">Repuestos</a></li>
+                <li class="col-md-2"><a href="#">Reparación</a></li>
                 <li class="col-md-2"><a href="#">Contacto</a></li>
 
             </ul>
