incorporación contacto whatsapp

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <!--TITULO-->
     <h1>HCabrera</h1>
 
+    <!--WHATSAPP FLOTANTE-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <a href="https://api.whatsapp.com/send?phone=+56982400802&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20sus%20servicios." class="whatsappfloat" target="_blank">
+        <i class="fa fa-whatsapp my-whatsappfloat"></i>
+    </a>
+
     <!--MENÚ CON SUB MENU (ELIMINADO) DESPLEGABLE-->
     <div class='row col-md-12 barraMenu'>
         <nav class="text-center">
