corrección funcionalidad menú

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                 <div class="icon cancel-btn">
                     <i class="fas fa-times"></i>
                 </div>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Nosotros</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Repuestos</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#sec1">Inicio</a></li>
+                <li><a href="#sec2">Nosotros</a></li>
+                <li><a href="#sec3">Servicios</a></li>
+                <li><a href="#sec4">Repuestos</a></li>
+                <li><a href="#sec5">Contacto</a></li>
                 </ul>
                 <div class="icon menu-btn">
                 <i class="fas fa-bars"></i>
@@ -130,7 +130,7 @@
     </section>
 
     <!--▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄ SECCIÓN 2 ▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄-->
-    <section>
+    <section id="sec2">
         <!--█████ CONÓCENOS █████-->
 
         <!--BARRA CONÓCENOS-->
@@ -171,7 +171,7 @@
     </section>
 
     <!--▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄ SECCIÓN 3 ▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄-->
-    <section>
+    <section id="sec3">
         <!--█████ SERVICIOS █████-->
         
          <!--BARRA SERVICIOS-->
