--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -109,7 +108,7 @@
                 <div class="col-sm-12 col-md-12 capa">
                     <div class="col-sm-12 col-md-12 textoPortada">
                         <!--TEXTO DENTRO DE PORTADA-->
-                        <p class="bienvenido">!BIENVENIDO! <br>AQUÍ ENCONTRARÁS LOS MEJORES SERVICIOS Y REPUESTOS DE LAS MEJORES MARCAS.
+                        <p class="bienvenido">¡BIENVENIDO! <br>AQUÍ ENCONTRARÁS LOS MEJORES SERVICIOS Y REPUESTOS DE LAS MEJORES MARCAS.
                         </p>
                         <br>
                         <p class="bienvenidomarcas">ELME, BROMMA, MERITOR, REXNORD, REGINACHAIN, KNOTT, KESSLER, SPICER, TEREX, RENOLD, ENTRE OTRAS.
@@ -294,9 +293,9 @@
 
     <!--▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄ SECCIÓN 4 ▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄-->
     <section id="sec4">
-        <!--█████ CONTACTO █████-->
+        <!--█████ REPUESTOS █████-->
         
-         <!--BARRA CONTACTO-->
+         <!--BARRA REPUESTOS-->
          <div id="barra-separadora">
             <h2 class="textobarra">R E P U E S T O S</h2>
         </div>
