--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                         <div id="mensaje2" class="errores">Email inválido</div>
                     </div>
                       <div class="app-form-group">
-                        <input type="text" id="itCelular" maxlength="8" class="app-form-control integer" placeholder="CELULAR (8 dígitos)">
+                        <input type="text" id="itCelular" maxlength="9" class="app-form-control integer" placeholder="CELULAR (9xxxxxxxx)">
                         <div id="mensaje3" class="errores">Celular inválido</div>
                     </div>
                       <div class="app-form-group message">
