--- a/index.html
+++ b/index.html
@@ -594,8 +594,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <script src=".js/script.js"></script>
-    <script src=".js/jquery-3.6.0.js"></script>
-    <script src=".js/jquery.numeric.js"></script>
+    <script src="js/jquery-3.6.0.js"></script>
+    <script src="js/jquery.numeric.js"></script>
+    <script src="js/script.js"></script>
 </body>
 <html>
