--- a/index.html
+++ b/index.html
@@ -493,7 +493,8 @@
                         <input type="text" id="itEmail" class="app-form-control" placeholder="EMAIL">
                         <div id="mensaje2" class="errores">Email inválido</div>
                     </div>
-                      <div class="app-form-group">
+                      <div class="app-form-group celu">
+                          <p class="verificador">+569</p>
                         <input type="text" id="itCelular" maxlength="8" class="app-form-control integer" placeholder="CELULAR (8 dígitos)">
                         <div id="mensaje3" class="errores">Celular inválido</div>
                     </div>
