--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
     <section id="sec1">
 
         <!--█████ PORTADA █████-->
-        <div class="col-sm-12 col-md-12 divPortada">
-            <div class="col-sm-12 col-md-12 portada">
-                <div class="col-sm-12 col-md-12 capa">
-                    <div class="col-sm-12 col-md-12 textoPortada">
+        <div class="divPortada">
+            <div class="portada">
+                <div class="capa">
+                    <div class="textoPortada">
                         <!--TEXTO DENTRO DE PORTADA-->
                         <p class="bienvenido">!BIENVENIDO! <br>AQUÍ ENCONTRARÁS LOS MEJORES SERVICIOS Y REPUESTOS DE LAS MEJORES MARCAS.
                         </p>
