corrección detalle responsividad

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <hr>
             <p class="servyrep-info">Servicios y repuestos.</p>
         </div>
-        <div class="row">
+        <div class="row infosec2">
             <div class="col-sm-12 col-md-4">
                 <p class="infoizquierda"><br> Contamos con más de <strong>25 años</strong> de experencia, con un equipo capacitado profesionalmente en el rubro. 
                     <br> <br> Nuestro OBJETIVO está enfocado en apoyar el sistema de gestión del área de mantención de nuestros clientes.
