--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                 <div class="screen-body">
                   <div class="screen-body-item left">
                     <div class="app-title">
-                      <span>¡ENVÍANOS</span>
+                      <span>¡ENVÍANOS</span><br>
                       <span>UN MENSAJE!</span>
                     </div>
                     <div class="app-contact">Contacto Directo: +569 82400802</div>
