Incorporación de fuentes + correción responsividad

--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@
                 <div class="capa">
                     <div class="textoPortada">
                         <!--TEXTO DENTRO DE PORTADA-->
-                        <p class="bienvenido">!BIENVENIDO! <br>AQUÍ ENCONTRARÁS LOS MEJORES SERVICIOS Y REPUESTOS DE LAS MEJORES MARCAS.
+                        <p class="bienvenido">!BIENVENIDO!
                         </p>
                         <br>
+                        <p class="bienvenidomensaje">AQUÍ ENCONTRARÁS LOS MEJORES SERVICIOS Y REPUESTOS DE LAS MEJORES MARCAS.
+                        </p>
                         <p class="bienvenidomarcas">ELME, BROMMA, MERITOR, REXNORD, REGINACHAIN, KNOTT, KESSLER, SPICER, TEREX, RENOLD, ENTRE OTRAS.
                         </p>
                         <p>
