Cambio texto de barra erróneo

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
         <!--BARRA CONÓCENOS-->
         <div id="barra-separadora">
-            <h2 class="textobarra">C O N Ó C E N O S</h2>
+            <h2 class="textobarra">N O S O T R O S</h2>
         </div><!-----FIN---->
 
         <!--ZONA INFORMACIÓN CONÓCENOS-->
@@ -553,24 +553,7 @@
             </div>
           </div>
           <!--CONTÁCTANOS-->
-          <div class="right box">
-            <h2 class="titulofooter">Contáctanos</h2>
-            <div class="content">
-              <form action="#">
-                <div class="email">
-                  <div class="text">Email *</div>
-                  <input type="email" required>
-                </div>
-                <div class="msg">
-                  <div class="text">Message *</div>
-                  <!-- <changeit rows="2" cols="25" required></changeit> -->
-                </div>
-                <div class="btn">
-                  <button type="submit">Send</button>
-                </div>
-              </form>
-            </div>
-          </div>
+          
         </div>
         <div class="bottom">
           <center>
