--- a/index.html
+++ b/index.html
@@ -552,8 +552,21 @@
               </div>
             </div>
           </div>
-          <!--CONTÁCTANOS-->
-          
+          <!--VALOR MONEDA-->
+          <div class="right box">
+            <h2 class="titulofooter">VALOR MONEDA</h2>
+            <div class="content">
+              <p>El valor de nuestros repuestos dependerá del valor actual del Dolar.</p>
+              <div class="bloque1dolar">
+              <h3 class="titulodolar">VALOR DOLAR</h3>
+              <div class="bloque2dolar">
+                <p id="dolar"></p>
+              </div>
+              <p class="textvalordia">Valor del día:</p>
+              <p id="fechadolar"></p>
+            </div>
+            </div>
+          </div>
         </div>
         <div class="bottom">
           <center>
