Mejora validación formulario

--- a/index.html
+++ b/index.html
@@ -488,20 +488,20 @@
                     <div id="formulario" class="app-form">
                       <div id="gruponombre" class="app-form-group">
                         <input type="text" name="nombre" id="itNombre" class="app-form-control" placeholder="NOMBRE">
-                        <div id="mensaje1" class="errores">Nombre inválido</div>
+                        <div id="mensaje1" class="errores">¡Nombre inválido!</div>
                     </div>
                       <div id="grupoemail" class="app-form-group">
                         <input type="text" name="email" id="itEmail" class="app-form-control" placeholder="EMAIL">
-                        <div id="mensaje2" class="errores">Email inválido</div>
+                        <div id="mensaje2" class="errores">¡Email inválido!</div>
                     </div>
                       <div id="grupocelular" class="app-form-group celu">
                           <p class="verificador">+569</p>
                         <input type="text" name="celular" id="itCelular" maxlength="8" class="app-form-control integer" placeholder="CELULAR (8 dígitos)">
                     </div>
-                    <div id="mensaje3" class="errores">Celular inválido</div>
+                    <div id="mensaje3" class="errores">¡Celular inválido!</div>
                       <div id="grupomensaje" class="app-form-group message">
-                        <input type="text" name="mensaje" id="itMensaje" maxlength="2000" class="mensaje-contacto app-form-control" placeholder="MENSAJE">
-                        <div id="mensaje4" class="errores">Escribe un mensaje</div>
+                        <input type="text" name="mensaje" id="itMensaje" maxlength="2000" class="mensaje-contacto app-form-control" placeholder="MENSAJE (max. 2000 carácteres)">
+                        <div id="mensaje4" class="errores">¡Escribe un mensaje!</div>
                     </div>
                       <div class="app-form-group buttons">
                         <button type="submit" id="bEnviar" class="boton">ENVIAR</button>
